--- a/src/index.html
+++ b/src/index.html
@@ -11,4 +11,5 @@
 <body>
   <app-root></app-root>
 </body>
+<script defer src="https://use.fontawesome.com/releases/v5.1.1/js/all.js" integrity="sha384-BtvRZcyfv4r0x/phJt9Y9HhnN5ur1Z+kZbKVgzVBAlQZX4jvAuImlIz+bG7TS00a" crossorigin="anonymous"></script>
 </html>
