--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>WhcLandingPageTwo</title>
-  <base href="https://RogelioCobian.github.io/whc-landing-page-two">
+  <base href="https://RogelioCobian.github.io/whc-landing-page-two/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 <link rel="stylesheet" href="styles.8d4b7c2dc54ed5fa7bcf.css"></head>
